--- a/app/src/main/res/res/values/strings.xml
+++ b/app/src/main/res/res/values/strings.xml
@@ -1,9 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">vpnMITM</string>
-    <string name="start_vpn">Start VPN</string>
-    <string name="stop_vpn">Stop from Notification Bar</string>
+    <string name="app_name">APKShare</string>
     <string name="action_settings">Settings</string>
     <string name="app_icon_description">Application icon</string>
     <string name="share_apk_dialog_title">Share APK</string>
