--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,16 +6,14 @@
     <string name="stop_vpn">Stop from Notification Bar</string>
     <string name="action_settings">Settings</string>
     <string name="app_icon_description">Application icon</string>
-    <string name="share_apk_dialog_title">Share APK</string>
 
-    <string name="app_size_b">%1$.2f B</string>
-    <string name="app_size_kib">%1$.2f KiB</string>
-    <string name="app_size_mib">%1$.2f MiB</string>
-    <string name="app_size_gib">%1$.2f GiB</string>
     <string name="passive_service_start">Monitor service has been started in passive mode.</string>
     <string name="passive_service_stop">Monitor service has been stopped. Was in passive mode.</string>
     <string name="ssl_warning">SSL problem</string>
     <string name="block_dialog_text">block traffic</string>
     <string name="cancel_dialog_text">cancel</string>
     <string name="dialog_text">Some text for a test dialog</string>
+    <string name="userQuestion">. \nDo you want to allow future traffic?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
