--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="copy_right">Copyright © %1$d Julian Sparber</string>
     <string name="about_contact_us">Contact me</string>
     <string name="about_github">Fork me on GitHub</string>
+    <string name="about_website">Visit my website</string>
 </resources>
