--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="notNow">later</string>
     <string name="title_activity_start">startActivity</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="about_page_description">Interceptor is a simple app to intercept traffic on your android phone. It validates other apps by injecting an invalid ssl certificate and than informs you about the security level of a connection.</string>
+    <string name="about_page_description">Interceptor is a simple app to intercept traffic on your android phone. It validates other apps by injecting an invalid ssl certificate and then informs you about the security level of a connection.</string>
 
     <!-- Strings related to Settings -->
 
